[metadata]
name = jaxfit
description = A proof-of-concept for custom minimizers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nsmith-/jaxfit
author = Nick Smith
author_email = nick.smith@cern.ch
maintainer = Nick Smith
maintainer_email = nick.smith@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://jaxfit.readthedocs.io/
    Bug Tracker = https://github.com/nsmith-/jaxfit/issues
    Discussions = https://github.com/nsmith-/jaxfit/discussions
    Changelog = https://github.com/nsmith-/jaxfit/releases

[options]
packages = find:
install_requires =
    jax
    jaxlib
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6
docs =
    Sphinx~=3.0
    myst_parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx_copybutton
test =
    iminuit
    matplotlib
    numpy>=1.13.3
    pandas
    pytest>=6
    scipy

[options.entry_points]
console_scripts =
    jaxfit = jaxfit.cli:main

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
